<resources>
    <string name="app_name">Liga Bola</string>
    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4344</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Mayor League</item>
        <item>Portugeuese Premiera Liga</item>
        <item>Australian A League</item>
        <item>Scotish Premier League</item>
        <item>English League 1</item>
    </string-array>
    <string-array name="league_image">
        <item>@drawable/english_premier_league</item>
        <item>@drawable/french_ligue_1</item>
        <item>@drawable/german_bundesliga</item>
        <item>@drawable/italian_serie_a</item>
        <item>@drawable/spanish_la_liga</item>
        <item>@drawable/american_mayor_league</item>
        <item>@drawable/portugeuese_premiera_liga</item>
        <item>@drawable/australian_a_league</item>
        <item>@drawable/scotish_premier_league</item>
        <item>@drawable/english_league_1</item>
    </string-array>
    <string name="team_badge">Team Badge</string>
    <string name="zero_score">00</string>
    <string name="divider_score">:</string>
    <string name="team_home">Team Home</string>
    <string name="team_away">Team Away</string>
    <string name="win">Win : 0</string>
    <string name="draw">Draw : 0</string>
    <string name="loss">Loss : 0</string>
    <string name="stadium">Stadium</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="team_name">Team Name</string>
</resources>